RichwoodNew/src/objects/Capital_Project_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Account_Yearly_Forecast__c</fullName>
        <label>Account Yearly Forecast</label>
        <referenceTo>Account_Yearly_Forecast__c</referenceTo>
        <relationshipLabel>Capital Projects with Forecast Spending in this Year</relationshipLabel>
        <relationshipName>Capital_Project_Forecasts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount_this_year__c</fullName>
        <inlineHelpText>This is the forecasted amount for this project for this year.</inlineHelpText>
        <label>Amount this Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capital_Project__c</fullName>
        <label>Capital Project</label>
        <referenceTo>Capital_Project__c</referenceTo>
        <relationshipLabel>Forecast Spend Per Year</relationshipLabel>
        <relationshipName>Capital_Project_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Please explain what you think they client will be doing on this capital project in this year.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Capital Project Forecast</label>
    <nameField>
        <displayFormat>CPF{00000}</displayFormat>
        <label>Capital Project Forecast</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capital Project Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>